--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -17,7 +17,8 @@
         <Chronometer
             android:id="@+id/chronometer2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
 
         <ImageView
             android:id="@+id/imageView2"
