--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -14,10 +14,12 @@
         tools:layout_editor_absoluteY="8dp"
         android:weightSum="1">
 
-        <Chronometer
-            android:id="@+id/chronometer2"
+        <TextView
+            android:id="@+id/countDown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.16"
+            android:text="TextView"
             android:visibility="visible" />
 
         <ImageView
