--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -22,14 +22,10 @@
             android:text="TextView"
             android:visibility="visible" />
 
-        <ImageView
+        <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="247dp"
-            android:adjustViewBounds="true"
-            android:cropToPadding="false"
-            app:srcCompat="@drawable/cage1"
-            android:layout_weight="0.16" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
