--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -10,22 +10,40 @@
         android:layout_width="395dp"
         android:layout_height="587dp"
         android:orientation="vertical"
+        android:weightSum="1"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:weightSum="1">
+        tools:layout_editor_absoluteY="8dp">
 
         <TextView
             android:id="@+id/countDown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.16"
+            android:layout_weight="0.10"
             android:text="TextView"
             android:visibility="visible" />
 
-        <com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/imageView2"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.10"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
+
+<!--            <Button
+                android:id="@+id/button"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Button" />-->
+
+            <ImageView
+                android:id="@+id/photoView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
