--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -15,35 +15,16 @@
         tools:layout_editor_absoluteY="8dp">
 
         <TextView
-            android:id="@+id/countDown"
-            android:layout_width="match_parent"
+            android:id="@+id/chronometer"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.10"
-            android:text="TextView"
-            android:visibility="visible" />
+            android:gravity="center_horizontal"
+            android:textSize="25sp" />
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/photoView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.10"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-<!--            <Button
-                android:id="@+id/button"
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:scaleType="fitXY"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:text="Button" />-->
-
-            <ImageView
-                android:id="@+id/photoView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
