--- a/app/src/main/res/layout/activity_game_two.xml
+++ b/app/src/main/res/layout/activity_game_two.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.he.matt.wheresaldo.ui.GameTwoActivity">
 
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="587dp"
+        android:orientation="vertical"
+        android:weightSum="1"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+        <TextView
+            android:id="@+id/chronometer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/photoView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
