--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -18,6 +18,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="25sp"/>
+            android:textSize="40sp"/>
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="match_parent"
+            android:layout_height="118dp"
+            android:onClick="backToMenu"
+            android:text="@string/back"
+            tools:layout_editor_absoluteX="91dp"
+            tools:layout_editor_absoluteY="16dp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
