--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -7,6 +7,7 @@
     tools:context="com.he.matt.wheresaldo.ui.GameOneActivity">
 
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="395dp"
         android:layout_height="587dp"
         android:orientation="vertical"
